# clawd-tank

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  setup_env.sh
.github/workflows/: build-macos-app.yml  release.yml
assets/: AppIcon.icns
docs/: architecture.md  network-api.md  protocol-changelog.md
docs/clawd-skins/: spec.md
docs/network-mode/: spec.md  trace.md
docs/pr-analysis/: firmware-sprite-loading-investigation.md  pr-1-comments-report.md  pr-4-comments-report.md
docs/superpowers/plans/: 2026-03-13-menubar-simulator-toggle.md  2026-03-14-bundled-simulator.md  2026-03-15-subagent-multi-session-display.md
docs/superpowers/specs/: 2026-03-11-clawd-notification-display-design.md  2026-03-13-menubar-simulator-toggle-design.md  2026-03-14-bundled-simulator-design.md  2026-03-15-subagent-display-design.md  2026-03-19-tool-aware-animations-design.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  ble_service.c  ble_service.h  idf_component.yml  main.c  notification.c  notification_ui.c  notification_ui.h  pixel_font.c  pixel_font.h  rgb_led.c  rgb_led.h  rle_sprite.h  scene.c  scene.h  ui_manager.c  ui_manager.h
firmware/main/assets/: sprite_alert.h  sprite_ble_icon.h  sprite_building.h  sprite_confused.h  sprite_disconnected.h  sprite_dizzy.h  sprite_going_away.h  sprite_happy.h  sprite_idle.h  sprite_juggling.h  sprite_mini_crab.h  sprite_sleeping.h  sprite_sweeping.h  sprite_thinking.h  sprite_typing.h  sprite_walking.h
firmware/test/: Makefile
host/: AppIcon.icns  build.sh  clawd-tank-notify  install-hooks.sh  requirements-dev.txt  requirements.txt  setup.py
host/clawd_daemon/: ble_client.py  protocol.py
host/clawd_tank_daemon/: ble_client.py  bonjour.py  daemon.py  network_client.py  network_server.py  protocol.py  session_store.py  sim_client.py  sim_process.py  socket_server.py
host/clawd_tank_menubar/: app.py  hooks.py  launchd.py  preferences.py  slider.py  version.py
host/tests/: conftest.py  test_daemon.py  test_menubar.py  test_network_client.py  test_network_server.py  test_observer.py  test_preferences.py  test_protocol.py  test_session_state.py  test_session_store.py  test_sim_client.py  test_sim_process.py  test_socket_server.py
simulator/: .gitignore  CMakeLists.txt  sim_ble_parse.c  sim_ble_parse.h  sim_display.c  sim_display.h  sim_events.c  sim_main.c  sim_screenshot.c  sim_socket.c  sim_socket.h  sim_timer.c  sim_timer.h
simulator/scenarios/: demo.json
simulator/shims/: ble_service.h  esp_timer.h  led_strip.h
tools/: analyze_sprite_bounds.py  crop_sprites.py  gemini_animate.py  scene-layout-editor.html  tcp_test.py
tools/sprite-designer/: ble-icon.html  clawd-disconnected.html  clawd-sleeping.html  generate_sprite_pngs.py
